Added fallen hero and normal hero progress